# cad

./: .gitignore  compare.md  pyproject.toml
analysis/: plot_reconstruction.py  run_reconstruction.py  run_synthesis.py
analysis_direct/: plot_reconstruction.py  run_reconstruction.py  run_synthesis.py
analysis_parallel/: audit_math.py  build_layout.py  global_layout.py  nersc_pm_run_reconstruction_one_obs.sh  nersc_pm_run_synthesis_margined.sh  nersc_pm_submit_reconstruction_incomplete.sh  plot_comparison_planck.py  plot_reconstruction.py  run_reconstruction.py  run_reconstruction_field.py  run_reconstruction_single.py  run_synthesis.py  run_synthesis_full.py  run_synthesis_margined.py  slurm_run_reconstruction_array.sh  slurm_run_synthesis.sh  solve_fisher.py
analysis_parallel/benchmark/: benchmark_cg_convergence.py  benchmark_core.py  benchmark_memory.txt  benchmark_speed.txt
data/: data_structure.md  inspect.ipynb
notes/: validate_anisotropy.py  validate_cad_multiscan_toy.py  validate_cad_single_scan_toy.py  validate_fft_prior_normalization.py  validate_prior.py
paper_draft/: 3inference_analytic.tex  appendix_wind.tex  defs.tex  main.aux  main.blg  main.fdb_latexmk  main.fls  main.tex  preamble.sty  ref_alan.bib  refs.bib
src/cad/: __init__.py  dataset_io.py  map.py  planck.py  plot_util.py  power.py  (+5 more)
test/: test_parallel.py
theory/: theory.md  theory_direct_solve.md  theory_paralle_solve.md  theory_parallel_solve.md
validation/: validate_anisotropy.py  validate_fft_prior_normalization.py  validate_multiscan_example.py  validate_single_scan_example.py
(+13 files in other folders)
