[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cad"
version = "0.1.0"
description = "CMB atmosphere decontamination (field-level inference utilities)"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "scipy",
]

[project.optional-dependencies]
camb = ["camb"]

[tool.setuptools.packages.find]
where = ["src"]

